# LetterboxdFightFinder

./: Procfile  README.md  pyproject.toml  requirements.txt
app/: app.py  letterboxd_scraper.py  ratings_analytics.py  tmdb_api_handler.py
templates/: community_results.html  community_results_additional_rows.html  index.html  initial_mutual_and_community_results.html  mutuals_results.html  mutuals_results_additional_rows.html  results.html
test_app/: test_app.py  test_letterboxd_scraper.py  test_ratings_analytics.py  test_tmdb_api_handler.py
test_app/expected_responses/: expected_top_five_differences_endpoint_response.py
