[tool.poetry]
name = "letterboxdfightfinder"
version = "0.1.0"
description = ""
authors = ["Peter Rowe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pytest = "8.0.0"
beautifulsoup4 = "4.12.3"
pandas = "2.2.0"
fastapi = "0.109.0"
uvicorn = "0.27.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
